--- a/zomapp/src/app/Header/header.component.html
+++ b/zomapp/src/app/Header/header.component.html
@@ -3,14 +3,14 @@
       <div id="brand">
           Developer Funnel
           &nbsp;
-          <a href="/" className="btn btn-info">Home</a>
+          <a [routerLink]="['/home']" class="btn btn-info">Home</a>
       </div>
       <div id="social">
-         <a href="/" className="btn btn-success">
-             <span className="glyphicon glyphicon-log-in"></span> LogIn</a>
+         <a href="/" class="btn btn-success">
+             <span class="glyphicon glyphicon-log-in"></span> LogIn</a>
          &nbsp;
-         <a href="/register" className="btn btn-info">
-          <span className="glyphicon glyphicon-user"></span> Register</a>
+         <a href="/register" class="btn btn-info">
+          <span class="glyphicon glyphicon-user"></span> Register</a>
       </div>
     </header>
 </div>
