--- a/zomapp/src/app/Home/QuickSearch.component.html
+++ b/zomapp/src/app/Home/QuickSearch.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="tileComponent2">
                 <div class="componentHeading">
-                    <a [routerLink]="['/listing']">{{meal.mealtype}}</a>
+                    <a [routerLink]="['/listing',meal.mealtype_id]">{{meal.mealtype}}</a>
                 </div>
                 <div class="componentSubHeading">
                     {{meal.content}}
