--- a/zomapp/src/app/Listing/listing.Component.css
+++ b/zomapp/src/app/Listing/listing.Component.css
@@ -15,22 +15,23 @@
 .tiles{
     width:77%;
     margin-left: 2%;
-    float: left;
+    display: inline-block;
     margin-top:-2%
 }
 
 .content{
     width:88%;
     margin-left: 6%;
-    height: 800px;
     margin-top: 1%;
 }
 
 .cardContainer{
-    width:99%;
+    width:48%;
     box-shadow: 10px 2px 10px gray;
     height:300px;
-    margin-top:2%
+    margin-top:2%;
+    float: left;
+    margin-left:2%
 }
 
 .component1{
@@ -52,37 +53,39 @@
     float: left;
 }
 
+.search{
+    height:80px;
+    width:100%;
+    margin-top: 3%;
+}
+
 .pills{
-    height:20px;
+    height:15px;
     width:70px;
     background-color: #b3cf89;
     border:1px solid black;
     padding:2%;
     font-size:20px;
-    margin-left: 1%;
+    margin-left: 2%;
+    border-radius:20%
+}
+
+.pills2{
+    background-color: #22191d;
+    color:#fff;
+    margin-top: 10%;
 }
 
 .btn{
-    width:50%;
-    height:50px;
+    width:92%;
+    height:40px;
     margin-top:5%;
-    background-color:#b0385f;
+    background-color:#f79a4e;
     color:white;
-    font-size:20px
+    font-size:20px;
+    margin-left: 8%
 }
 
 .btn > a{
     color:white !important;
-}
-
-#footer{
-    height:60px;
-    background-color: #d2a08c;
-    width:100%;
-    margin-top: 2%;
-    display: inline-block
-}
-
-h3,h4{
-    text-align: center;
 }
