--- a/zomapp/src/app/details/details.component.html
+++ b/zomapp/src/app/details/details.component.html
@@ -29,6 +29,6 @@
         </div>
         <h2>Available</h2>
         <button class="btn">Add To Cart</button>
-        <button class="btn">Checkout</button>
+        <a [routerLink] = "['/order']" class="btn">Checkout</a>
     </div>
 </div>
